RESOLVED FIXED187119
Fix a bug in $vm.callFrame() and apply previously requested renaming of $vm.println to print.
https://bugs.webkit.org/show_bug.cgi?id=187119
Summary Fix a bug in $vm.callFrame() and apply previously requested renaming of $vm.p...
Mark Lam
Reported 2018-06-27 15:18:54 PDT
I also renamed some other "print" functions to use "dump" instead to match their underlying C++ code that they will call e.g. CodeBlock::dumpSource().
Attachments
proposed patch. (13.36 KB, patch)
2018-06-27 15:22 PDT, Mark Lam
no flags
Mark Lam
Comment 1 2018-06-27 15:22:24 PDT
Created attachment 343761 [details] proposed patch.
Keith Miller
Comment 2 2018-06-27 15:33:26 PDT
Comment on attachment 343761 [details] proposed patch. r=me
Mark Lam
Comment 3 2018-06-27 15:34:04 PDT
Comment on attachment 343761 [details] proposed patch. Thanks for the review. Landing now.
WebKit Commit Bot
Comment 4 2018-06-27 16:14:00 PDT
Comment on attachment 343761 [details] proposed patch. Clearing flags on attachment: 343761 Committed r233285: <https://trac.webkit.org/changeset/233285>
WebKit Commit Bot
Comment 5 2018-06-27 16:14:01 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-06-27 16:14:39 PDT
Note You need to log in before you can comment on or make changes to this bug.